adding new attributes to character: generation, type: [PC,NPC,DEAD]
