# backend/src/resources/character/character.types.ts
@@ -1,7 +1,7 @@
 import { Character } from "@prisma/client";
 
 type CreateCharacterDTO = Pick<
-    Character, "name" | "race" | "age" | "height" | "money" | "imageUrl" | "userId" | "archetypeId" 
+    Character, "name" | "race" | "age" | "height" | "money" | "imageUrl" | "userId" | "archetypeId" | "generation" | "type"
 >;
 type UpdateCharacterDTO = Partial<CreateCharacterDTO>;
 type DeleteCharacterDTO = Pick<Character, "id">;
